Modified json schema

--- a/cloud-resource-base/project-management-service.json
+++ b/cloud-resource-base/project-management-service.json
@@ -4,10 +4,9 @@
         "name": "Project Management Service",
         "allocated_number_of_users": 55
     },
-    "deploymentScriptReferences": [
+    "providers": [
         {
-            "provider": "Pivotal Tracker",
-            "reference": "link to Pivotal Tracker request form"
+            "name": "Pivotal Tracker"
         }
     ]
 }
