--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,41 @@
             <version>1.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>au.edu.unsw.cse.soc.federatedcloud</groupId>
+            <artifactId>AWS-Deployers</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>au.edu.unsw.cse.soc.federatedcloud</groupId>
+            <artifactId>Rackspace-Deployers</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>au.edu.unsw.cse.soc.federatedcloud.CloudResourceBaseDeploymentEngine</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
     <properties>
         <slf4j.version>1.6.4</slf4j.version>
