--- a/AWS-Deployers/pom.xml
+++ b/AWS-Deployers/pom.xml
@@ -10,6 +10,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>au.edu.unsw.cse.soc.federatedcloud</groupId>
+            <artifactId>federated-cloud-deployment-engine</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
             <version>1.6.12</version>
